# python-repeatable-iterable

./: .gitignore  CONTRIBUTORS.md  README.md  README_printable.md  build_and_checks.sh  build_readme.sh  pyproject.toml  wget_sha512.sh
latex/: python-repeatable-iterable.tex  python-repeatable-iterable.tex.tpl
src/python_repeatable_iterable/: __init__.py
test_typing/: __init__.py
typing_test/: __init__.py
