# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-repeatable-iterable"
version = "1.1.0"
description = "Add a RepeatableIterable type and a function to obtain it"
readme = "README.md"
authors = [
    { name = "Laurent Lyaudet", email = "laurent.lyaudet@gmail.com" },
]
license = { file = "COPYING.LESSER" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Python", "Iterable", "Repeatable", "RepeatableIterable"]
dependencies = [
   "python-none-objects==1.0.1",
]
requires-python = ">=3.0"

[project.optional-dependencies]
dev = ["black"]

[project.urls]
"Homepage" = "https://github.com/LLyaudet/python-repeatable-iterable"
"Bug Tracker" = "https://github.com/LLyaudet/python-repeatable-iterable/issues"

